--- a/.github/workflows/workflows-lint.yml
+++ b/.github/workflows/workflows-lint.yml
@@ -1,76 +1,98 @@
----
-name: Workflows quality gate
-run-name: Workflows quality gate
+name: GitHub Actions Workflow Linter
 
-on:  # yamllint: disable-line rule:truthy
-  push:
-    paths:
-      - ".github/workflows/*"
+on:
   pull_request:
     paths:
       - ".github/workflows/*"
-  workflow_dispatch:
+  workflow_dispatch: {}
+
+permissions:
+  contents: read
+  checks: write
+  pull-requests: write
 
 concurrency:
   group: workflows-quality-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
+  check-filenames:
+    name: Enforce .yaml (no .yml allowed)
+    runs-on: ubuntu-latest
+    timeout-minutes: 3
+    steps:
+      - uses: actions/checkout@v4
+      - name: Check for .yml files (warn only)
+        shell: bash
+        run: |
+          set -eo pipefail
+          mapfile -t ymls < <(find .github/workflows -type f -name "*.yml" | sort || true)
+          if (( ${#ymls[@]} > 0 )); then
+            echo "::group::Found .yml files (please rename to .yaml)"
+            for file in "${ymls[@]}"; do
+              printf '::warning file=%s,title=Invalid Extension::The file "%s" should be renamed to ".yaml".\n' "$file" "$file"
+            done
+            echo "::endgroup::"
+          else
+            echo "All good: only .yaml files are present."
+          fi
+
   actionlint:
-    name: actionlint
+    name: actionlint (PR review, added lines only)
     runs-on: ubuntu-latest
+    needs: check-filenames
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@v4
-      - name: Install actionlint
-        run: bash <(curl -fsSL https://raw.githubusercontent.com/rhysd/actionlint/main/scripts/download-actionlint.bash) latest /usr/local/bin
-      - name: Run actionlint
-        shell: bash
+      - name: Install shellcheck (optional)
         run: |
-          set -eo pipefail
-          shopt -s nullglob
-          files=(.github/workflows/*.yml .github/workflows/*.yaml)
-          if (( ${#files[@]} == 0 )); then
-            echo "No workflow files."
-            exit 0
-          fi
-          actionlint "${files[@]}"
+          sudo apt-get -qq update
+          sudo apt-get -y -qq install shellcheck
+      - name: Run actionlint via reviewdog
+        uses: reviewdog/action-actionlint@v1
+        env:
+          SHELLCHECK_OPTS: -S error
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          reporter: github-pr-review
+          level: error
+          filter_mode: added
+          fail_level: error
 
-  yamllint:
-    name: yamllint (GA-optimized)
+  actionlint-fullscan:
+    name: actionlint (full scan on demand)
     runs-on: ubuntu-latest
+    needs: check-filenames
+    if: ${{ github.event_name == 'workflow_dispatch' }}
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@v4
-      - name: Install yamllint
-        run: python3 -m pip install --user yamllint
-      - name: Run yamllint for .yml & .yaml
-        shell: bash
+      - name: Install shellcheck
         run: |
-          set -eo pipefail
-          shopt -s nullglob
-          files=(.github/workflows/*.yml .github/workflows/*.yaml)
-          if (( ${#files[@]} == 0 )); then
-            echo "No workflow files."
-            exit 0
-          fi
-          # 警告も失敗扱いにしたい場合は -s を付与
-          python3 -m yamllint -f github -c .yamllint "${files[@]}"
+          sudo apt-get -qq update
+          sudo apt-get -y -qq install shellcheck
+      - name: Run actionlint via reviewdog (full scan)
+        uses: reviewdog/action-actionlint@v1
+        env:
+          SHELLCHECK_OPTS: -S error
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          reporter: github-pr-check
+          level: error
+          filter_mode: nofilter
+          fail_level: error
 
-  # ※ 将来的に拡張子を .yml に統一したい場合は、下のジョブを有効化すると .yaml が残っているPRを落とせます。
-  # check-filenames:
-  #   name: Enforce .yml (no .yaml allowed)
+  # yamllint:
+  #   name: yamllint (workflows)
   #   runs-on: ubuntu-latest
+  #   needs: check-filenames
+  #   timeout-minutes: 5
   #   steps:
   #     - uses: actions/checkout@v4
-  #     - name: Fail if any .yaml exist
-  #       shell: bash
-  #       run: |
-  #         set -eo pipefail
-  #         shopt -s nullglob
-  #         yamls=(.github/workflows/*.yaml)
-  #         if (( ${#yamls[@]} > 0 )); then
-  #           echo "::group::.yaml found; please rename to .yml"
-  #           printf '::error file=%s,title=Invalid Extension::.yaml must be .yml\n' "${yamls[@]}"
-  #           echo "::endgroup::"
-  #           exit 1
-  #         fi
-  #         echo "All good: only .yml files."
+  #     - name: Run yamllint (use .github/workflows/yamllint.yaml)
+  #       uses: ibiqlik/action-yamllint@v3
+  #       with:
+  #         config_file: ".github/workflows/yamllint.yaml"
+  #         file_or_dir: ".github/workflows"
+  #         format: github
+  #         strict: true
