--- a/.github/workflows/workflows-lint.yml
+++ b/.github/workflows/workflows-lint.yml
@@ -1,9 +1,10 @@
-name: GitHub Actions Workflow Linter
+name: "GitHub Actions Workflow Lint"
 
 on:
-  pull_request_target:
+  pull_request:
+    types: [opened, synchronize, reopened, ready_for_review]
     paths:
-      - ".github/workflows/*"
+      - ".github/workflows/**"
 
 permissions:
   contents: read
@@ -19,86 +20,14 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 20
     steps:
-      - name: Checkout
+      - name: Harden runner egress
+        uses: step-security/harden-runner@v2
+        with:
+          egress-policy: audit
+
+      - name: Checkout code
         uses: actions/checkout@v4
         with:
-          persist-credentials: false
-
-      - name: Check for .yml files
-        shell: bash
-        run: |
-          echo "::group::Scan '.yml' in .github/workflows"
-          set -eo pipefail
-          mapfile -t ymls < <(find .github/workflows -type f -name "*.yml" | sort || true)
-          if (( ${#ymls[@]} > 0 )); then
-            for file in "${ymls[@]}"; do
-              printf '::warning file=%s,title=Invalid Extension::The file \"%s\" should be renamed to \".yaml\".\n' "$file" "$file"
-            done
-          else
-            echo "All good: only .yaml files are present."
-          fi
-          echo "::endgroup::"
-
-      - name: Install shellcheck
-        run: |
-          sudo apt-get -qq update
-          sudo apt-get -y -qq install shellcheck
-
-      - name: Run actionlint
-        uses: reviewdog/action-actionlint@v1
-        env:
-          SHELLCHECK_OPTS: -S error
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          reporter: github-pr-check
-          tool_name: "actionlint"
-          level: error
-          filter_mode: nofilter
-          fail_level: error
-          actionlint_flags: ./.github/workflows
-
-      - name: Run ghalint
-        uses: koki-develop/github-actions-lint/ghalint@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          reporter: github-pr-check
-          tool_name: "ghalint"
-          level: error
-
-      - name: Run zizmor
-        uses: koki-develop/github-actions-lint/zizmor@v1
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          reporter: github-pr-check
-          tool_name: "zizmor"
-          persona: auditor
-name: GitHub Actions Workflow Linter
-
-on:
-  pull_request_target:
-    paths:
-      - ".github/workflows/**"   # 再帰
-
-permissions:
-  contents: read
-  checks: write
-  pull-requests: write          # reviewdog系のPRコメント/チェック用
-
-concurrency:
-  group: workflows-quality-${{ github.ref }}
-  cancel-in-progress: true
-
-jobs:
-  workflow-lint:
-    name: Lint GitHub Workflows
-    runs-on: ubuntu-latest
-    timeout-minutes: 20
-    steps:
-      # pull_request_target では PRコードを直接実行しない（ベースのSHAをチェックアウト）
-      - name: Checkout base branch (safe)
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.pull_request.base.sha }}
           fetch-depth: 0
           persist-credentials: false
 
@@ -117,23 +46,10 @@ jobs:
           fi
           echo "::endgroup::"
 
-      - name: Install shellcheck
-        run: |
-          sudo apt-get -qq update
-          sudo apt-get -y -qq install shellcheck
-
       - name: Run actionlint
-        uses: reviewdog/action-actionlint@v1
-        env:
-          SHELLCHECK_OPTS: -S error
+        uses: rhysd/actionlint@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          reporter: github-pr-check
-          tool_name: "actionlint"
-          level: error
-          filter_mode: nofilter
-          fail_level: error
-          actionlint_flags: ./.github/workflows
 
       - name: Run ghalint
         uses: koki-develop/github-actions-lint/ghalint@v1
@@ -150,3 +66,22 @@ jobs:
           reporter: github-pr-check
           tool_name: "zizmor"
           persona: auditor
+
+      - name: policy checks
+        shell: bash
+        run: |
+          echo "::group::Policy checks"
+          exitcode=0
+          shopt -s nullglob
+          for wf in .github/workflows/*.yml .github/workflows/*.yaml; do
+            echo "Checking $wf"
+            if grep -Eiq 'password|secret|token' "$wf"; then
+              echo "⚠️  Potential secret-like string in $wf (use \${{ secrets.* }})"
+            fi
+            if grep -Eq 'uses:.*@(?:main|master)\b' "$wf"; then
+              echo "❌  Unpinned action ref (@main/@master) found in $wf"
+              exitcode=1
+            fi
+          done
+          echo "::endgroup::"
+          exit $exitcode
